tests/lean/kernelMVarBug.lean.expected.out
kernelMVarBug.lean:5:15-5:20: error: failed to synthesize instance
  HAdd α α α
